[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
snow = "0.9.3"
lazy_static = "1.4.0"
tokio-socks = "0.5.1"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
curve25519-dalek = "4.1.1"
