[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
lazy_static = "1.4.0"
tokio-socks = { git = "https://github.com/jmfrank63/tokio-socks.git", branch = "implement-asrawfd" }
tokio = { version = "1", features = ["full"] }
common = { path = "../common" }
chacha20poly1305 = { version = "0.10.1", features = ["default", "std"] }
