[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
curve25519-dalek = "4.1.1"
blake2 = "0.10.6"
hex = "0.4.3"
chacha20poly1305 = { version = "0.10.1", features = ["default", "std"] }
